# GPUChem

./: CMakeLists.txt  README.md
SCF/: CMakeLists.txt  RSCF.cpp  RSCF.h  SCF.cpp  SCF.h  SCF_Algorithm.h  SCF_DIIS.cpp  SCF_plain.cpp  USCF.cpp
Setup/: CMakeLists.txt  CTestTestfile.cmake  Jobinfo.cpp  Jobinfo.h  Makefile  cmake_install.cmake  molecule.cpp  molecule.h
aux/: rys_root.txt
aux/basis/: 6311g.bas  sto3g.bas
basis/: AO.cpp  AO.h  CMakeLists.txt  CTestTestfile.cmake  Makefile  basis_set.cpp  basis_set.h  cmake_install.cmake  molecule_basis.cpp  molecule_basis.cu  molecule_basis.cuh  molecule_basis.h  util.cpp  util.h
integral/: CMakeLists.txt  Hamiltonian.cuh  Hamiltonian.h  HartreeFock_Rys.cpp  HartreeFock_Rys_gpu.cu  HartreeFock_Rys_gpu.cuh  JKmat.cpp  JKmat.cu  JKmat.cuh  JKmat.h  Makefile  hcore.cpp  hcore.cu  hcore.cuh  hcore.h
qchem_ref/: C2H4.in  C2H4.out  H2.in  H2.out  H2_10.in  H2_10.out  H2_6311g.in  H2_6311g.out
tests/: C4H10.in  CMakeLists.txt  CTestTestfile.cmake  H2.in  H2_10.in  H2_6311g.in  Hamiltonian_test.cpp  He.in  Makefile  SCF_test.cpp  Setup_test.cpp  basis_test.cpp  cmake_install.cmake
tests/C2H4/: C2H4.in  C2H4_gpu.in  Pmat.txt  energy.txt
tests/H2/: H2_gpu.in  Pmat.txt  energy.txt
tests/H2/.ipynb_checkpoints/: H2-checkpoint.in
